--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,30 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "frontend": "npm run start --prefix ../frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
-    "concurrently": "^7.3.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "joi": "^17.6.0",
-    "json": "^11.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.4",
-    "nodemailer": "^6.7.8",
-    "nodemon": "^2.0.19",
-    "shortid": "^2.2.16",
-    "html-pdf": "^2.2.0"
-  }
+  "license": "ISC"
 }
