--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "sass": "^1.54.7",
     "axios": "^0.27.2",
 		"bootstrap": "^5.2.0",
-    "mdbreact": "^5.2.0"
+    "mdbreact": "^5.2.0",
+    "react-select": "^5.4.0",
+    "sweetalert2": "^11.4.20"
   },
   "scripts": {
     "start": "react-scripts start",
